2013-09-23  Adam Butcher  <adam@jessamine.co.uk>

	PR c++/58500
	* type-utils.h (find_type_usage): Only traverse one type level into
	member function pointers.

2013-09-23  Adam Butcher  <adam@jessamine.co.uk>

	* parser.c (cp_parser_init_declarator): Defer calling
	finish_fully_implicit_template for forward declarations until after
	other decl processing is complete.  Cleanup for clarity: Extract 'else'
	case after 'if' containing unconditional return.

2013-09-23  Adam Butcher  <adam@jessamine.co.uk>

	* parser.c (make_generic_type_name): Spell generic type names '<autoN>'
	rather than '__GenN'.

2013-09-23  Adam Butcher  <adam@jessamine.co.uk>

	* lambda.c (maybe_add_lambda_conv_op): Don't check for instantiated
	callop in the case of generic lambdas.

2013-09-23  Adam Butcher  <adam@jessamine.co.uk>

	* parser.c (make_generic_type_name): Use global count rather than
	parameter and ...
	(add_implicit_template_parms): ... propagate interface change here.

2013-09-20  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58481
	* pt.c (tsubst_copy): Use current_nonlambda_class_type to
	call tsubst_baselink.

2013-09-18  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58457
	* class.c (instantiate_type): Loosen a bit the gcc_assert.

2013-09-18  Marek Polacek  <polacek@redhat.com>

	PR sanitize/58443
	* typeck.c (cp_build_binary_op): Properly honor -fsanitize options.
	Remove unnecessary check.

2013-09-18  Marek Polacek  <polacek@redhat.com>

	PR sanitizer/58411
	* typeck.c (cp_build_binary_op): Don't sanitize function if it has the
	no_sanitize_undefined attribute.

2013-09-17  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58435
	* pt.c (tsubst, [BOUND_TEMPLATE_TEMPLATE_PARM]): Take into account
	the cp_type_quals (r) too.

2013-09-16  Adam Butcher  <adam@jessamine.co.uk>

	* cp-tree.h (type_uses_auto_or_concept): Declare.
	(is_auto_or_concept): Declare.
	* decl.c (grokdeclarator): Allow 'auto' parameters in lambdas with