@@ -1,8 +1,13 @@
+2013-09-25  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/58516
+	* g++.dg/tm/pr58516.C: New test.
+
 2013-09-24  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
-    * lib/target-supports.exp (check_effective_target_arm_cond_exec):
-    New procedure.
-    * gcc.target/arm/minmax_minus.c: Check for cond_exec target.
+	* lib/target-supports.exp (check_effective_target_arm_cond_exec):
+	New procedure.
+	* gcc.target/arm/minmax_minus.c: Check for cond_exec target.
 
 2013-09-24  Richard Biener  <rguenther@suse.de>
 
